--- a/Phinder/Phinder/Localizable.xcstrings
+++ b/Phinder/Phinder/Localizable.xcstrings
@@ -1,6 +1,19 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "%@ (%lld) aus %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ (%2$lld) aus %3$@"
+          }
+        }
+      }
+    },
+    "%@:" : {
+
+    },
     "%lld Jahre alt, %@" : {
       "localizations" : {
         "en" : {
@@ -48,6 +61,9 @@
     "Bild auswählen" : {
 
     },
+    "Bild wird hochgeladen…" : {
+
+    },
     "Bis:" : {
 
     },
@@ -55,6 +71,9 @@
 
     },
     "E-Mail" : {
+
+    },
+    "Einstellungen" : {
 
     },
     "Email" : {
@@ -103,6 +122,9 @@
 
     },
     "Männlich" : {
+
+    },
+    "Mein Profil" : {
 
     },
     "Model" : {
