Kleinere Anpassung am ProfilContactView

--- a/Phinder/Phinder/Localizable.xcstrings
+++ b/Phinder/Phinder/Localizable.xcstrings
@@ -132,6 +132,9 @@
     "Keine Ergebnisse gefunden." : {
 
     },
+    "Keine Kontaktdaten bekannt." : {
+
+    },
     "Keine Kontaktdaten verfügbar." : {
 
     },
