kleinere Textanpassung wenn keine Fotos vorhanden sind

--- a/Phinder/Phinder/Localizable.xcstrings
+++ b/Phinder/Phinder/Localizable.xcstrings
@@ -129,6 +129,9 @@
     "Instagram URL" : {
 
     },
+    "Keine Beschreibung vorhanden." : {
+
+    },
     "Keine Ergebnisse gefunden." : {
 
     },
@@ -169,6 +172,9 @@
 
     },
     "Nachname" : {
+
+    },
+    "Noch keine Bilder vorhanden." : {
 
     },
     "Noch keinen Account? Jetzt Registrieren!" : {
