Edited ReadMe, GitIgnore and Img. Added / Edited a few Views

--- a/Phinder/Phinder/Localizable.xcstrings
+++ b/Phinder/Phinder/Localizable.xcstrings
@@ -69,6 +69,12 @@
     "Bis:" : {
 
     },
+    "Dark Mode" : {
+
+    },
+    "Darstellung" : {
+
+    },
     "Divers" : {
 
     },
@@ -316,6 +322,9 @@
 
     },
     "z. B. 99" : {
+
+    },
+    "Zurück" : {
 
     }
   },
